Fixed issue: Display of public statistics in LimeSpired template

--- a/templates/limespired/template.css
+++ b/templates/limespired/template.css
@@ -1334,6 +1334,8 @@ table.statisticstable td {
 
 table.statisticstable img {
   margin: 12px auto;
+  width: 680px;
+  border:none;
 }
 
 table.statisticstable strong {
