Dev: fixed issue #09555: pager_center can overlap pager_left

--- a/styles/adminstyle.css
+++ b/styles/adminstyle.css
@@ -161,6 +161,8 @@ div.ui-jqgrid-hbox input, div.ui-jqgrid-hbox input{
     height: auto;
     padding: 0 2px;
 }
+/* fix jqgrid pager width */
+#pager_left{width:auto !important}
 
 /* Fix height of browsettable */
 #gview_displayresponses th .qcode {
