--- a/styles/adminstyle.css
+++ b/styles/adminstyle.css
@@ -161,7 +161,7 @@ div.ui-jqgrid-hbox input, div.ui-jqgrid-hbox input{
     height: auto;
     padding: 0 2px;
 }
-/* fix jqgrid pager width */
+/* fix jqgrid pager width see bug #9555#c32072 */
 #pager_left{width:auto !important}
 
 /* Fix height of browsettable */
